# SafeStar-Robotics

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Docs/: outline.md
include/: Node.hpp  bitgrid.hpp  node.hpp
src/: main.cpp
test/: CMakeLists.txt  test_bitgrid.cpp  test_node.cpp
